[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/DefaultFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/settings.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 390.0
margin_top = 100.0
margin_right = -390.0
margin_bottom = -100.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -115.0
margin_top = -1.0
margin_right = 131.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 825.0
margin_bottom = 564.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actual_menu" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 793.0
margin_bottom = 532.0

[node name="spacer" type="Control" parent="PanelContainer/MarginContainer/actual_menu"]
margin_right = 768.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="options" type="GridContainer" parent="PanelContainer/MarginContainer/actual_menu"]
margin_top = 42.0
margin_right = 768.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
columns = 2

[node name="music" type="Label" parent="PanelContainer/MarginContainer/actual_menu/options"]
margin_right = 94.0
margin_bottom = 37.0
theme = SubResource( 1 )
text = "MUSIC"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/actual_menu/options"]
margin_left = 213.0
margin_right = 653.0
margin_bottom = 37.0
size_flags_horizontal = 4

[node name="value" type="Label" parent="PanelContainer/MarginContainer/actual_menu/options/HBoxContainer"]
margin_top = 11.0
margin_right = 36.0
margin_bottom = 25.0
text = "100%"

[node name="music" type="HSlider" parent="PanelContainer/MarginContainer/actual_menu/options/HBoxContainer"]
margin_left = 40.0
margin_right = 440.0
margin_bottom = 37.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0

[node name="label_sfx" type="Label" parent="PanelContainer/MarginContainer/actual_menu/options"]
margin_top = 47.0
margin_right = 94.0
margin_bottom = 84.0
theme = SubResource( 1 )
text = "SFX"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/actual_menu/options"]
margin_left = 213.0
margin_top = 47.0
margin_right = 653.0
margin_bottom = 84.0
size_flags_horizontal = 4

[node name="value" type="Label" parent="PanelContainer/MarginContainer/actual_menu/options/HBoxContainer2"]
margin_top = 11.0
margin_right = 36.0
margin_bottom = 25.0
text = "100%"

[node name="sfx" type="HSlider" parent="PanelContainer/MarginContainer/actual_menu/options/HBoxContainer2"]
margin_left = 40.0
margin_right = 440.0
margin_bottom = 37.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/actual_menu/options"]
margin_top = 112.0
margin_right = 94.0
margin_bottom = 126.0
text = "language"

[node name="language" type="OptionButton" parent="PanelContainer/MarginContainer/actual_menu/options"]
margin_left = 694.0
margin_top = 94.0
margin_right = 768.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 10
text = "English"
items = [ "English", null, false, 0, null, "Tagalog", null, false, 1, null ]
selected = 0

[node name="label_touch" type="Label" parent="PanelContainer/MarginContainer/actual_menu/options" groups=["desktop"]]
margin_top = 167.0
margin_right = 94.0
margin_bottom = 181.0
text = "touch_controls"

[node name="touch" type="CheckButton" parent="PanelContainer/MarginContainer/actual_menu/options" groups=["desktop"]]
margin_left = 692.0
margin_top = 154.0
margin_right = 768.0
margin_bottom = 194.0
size_flags_horizontal = 10

[node name="label_fullscreen" type="Label" parent="PanelContainer/MarginContainer/actual_menu/options" groups=["desktop"]]
margin_top = 217.0
margin_right = 94.0
margin_bottom = 231.0
text = "full_screen"

[node name="fullscreen" type="CheckButton" parent="PanelContainer/MarginContainer/actual_menu/options" groups=["desktop"]]
margin_left = 692.0
margin_top = 204.0
margin_right = 768.0
margin_bottom = 244.0
size_flags_horizontal = 10

[node name="close" type="Button" parent="PanelContainer/MarginContainer/actual_menu"]
margin_top = 430.0
margin_right = 768.0
margin_bottom = 507.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
text = "button_close"

[node name="anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fade = SubResource( 3 )

[connection signal="value_changed" from="PanelContainer/MarginContainer/actual_menu/options/HBoxContainer/music" to="." method="_on_HSlider0_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/actual_menu/options/HBoxContainer2/sfx" to="." method="_on_HSlider_value_changed"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/actual_menu/options/language" to="." method="_on_language_item_selected"]
[connection signal="toggled" from="PanelContainer/MarginContainer/actual_menu/options/touch" to="." method="_on_touch_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/actual_menu/options/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/actual_menu/close" to="." method="_on_close_pressed"]
